# sse-test

client/: Cargo.toml  index.html
client/src/: main.rs
server/: .env  Cargo.toml
server/src/: env_keys.rs  main.rs  sse_route.rs
server/src/setup/: app_port.rs  cors.rs  mod.rs
